--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
     "session-file-store": "^1.5.0",
     "ws": "^8.18.3"
   },
