--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.ts",
-    "dev": "nodemon src/server.ts --ext ts,tsx --ignore sessions",
+    "test": "jest",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ext js,jsx --ignore sessions",
     "createDB": "npx sequelize db:create",
     "mig": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate",
     "seed": "npx sequelize db:seed:all",
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
@@ -28,21 +30,10 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.5",
-    "@types/express-session": "^1.18.2",
-    "@types/morgan": "^1.9.10",
-    "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.5.0",
+    "jest": "^30.2.0",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.4"
+    "nodemon": "^3.1.11"
   }
 }
